--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
-# source code
+# Source code
 nginx_build_flags:
   - '--with-pcre-jit'
   - '--with-ipv6'
@@ -25,34 +25,39 @@ nginx_extra_packages:
   # For GeoIP blocking feature
   - geoip-database
   - libgeoip1
-# daemon
+
+# Daemon
 nginx_config_file: nginx.conf.j2
 nginx_daemon_group: www-data
 nginx_daemon_path: /usr/share/nginx/sbin/nginx
 nginx_daemon_user: www-data
 nginx_reload_on_update: no
 nginx_security_config_file: security.conf.j2
-# modules
+
+# Modules
 nginx_length_hiding_filter_module_enabled: no
 nginx_pagespeed_module_cache_directory: /var/cache/nginx_pagespeed
 nginx_pagespeed_module_configure: ''
 nginx_pagespeed_module_enabled: no
 nginx_upload_module_enabled: no
 nginx_zip_module_enabled: no
-# logging
+
+# Logging
 nginx_log_rotations_frequency: daily
 nginx_log_rotations_max_count: 49
 nginx_log_rotations_config_file: logrotate.j2
 nginx_log_rotations:
   - name: nginx
     config_file: '{{ nginx_log_rotations_config_file }}'
-# miscellaneous
+
+# Miscellaneous
 nginx_keepalive_timeout: 65
 nginx_server_header_engine: 'nginx'
 nginx_types_hash_max_size: 2048
 nginx_worker_connections: 768
 nginx_worker_processes: '{{ ansible_processor_count }}'
-# networking
+
+# Networking
 nginx_interface: null
 nginx_port: 80
 nginx_port_ssl: 443
@@ -60,11 +65,13 @@ nginx_ports:
   - '{{ nginx_port }}'
   - '{{ nginx_port_ssl }}'
 nginx_ufw_rules: "{{ nginx_ports|map_items('port', direction='in', interface=nginx_interface or omit, proto='tcp', rule='allow')|list }}"
-# security
+
+# Security
 nginx_geoip_blocking_enabled: no
 nginx_geoip_blocking_default: allow
 nginx_geoip_countries_blacklist: []
 nginx_geoip_countries_whitelist: []
 nginx_ips_blacklist: []
-# private
+
+# Private
 _nginx_start: {}
