--- a/tasks/facts.yml
+++ b/tasks/facts.yml
@@ -1,8 +1,14 @@
 ---
 
-- assert:
-    that:
-      - nginx_daemon_mode in nginx_daemon_modes
-      - nginx_sites is defined
-      - nginx_version is defined
+- block:
+    - dynamic_defaults:
+        hostvars: '{{ hostvars[inventory_hostname] }}'
+        defaults: '{{ nginx_dynamic_defaults }}'
+        must_match: yes
+
+    - assert:
+        that:
+          - nginx_daemon_mode in nginx_daemon_modes
+          - nginx_sites is defined
+          - nginx_version is defined
   tags: [nginx, always]
