--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,7 +25,7 @@
         umask: '{{ nginx_pip_umask }}'
         version: "{{ (nginx_cryptography_version == 'latest')|ternary(omit, nginx_cryptography_version) }}"
       environment: '{{ nginx_pip_environment }}'
-  become: yes
+  become: '{{ do_become }}'
   tags: [nginx, packages]
 
 - include_tasks: pagespeed.yml
@@ -175,7 +175,7 @@
           check_mode: no
           notify: '{{ nginx_daemon_modes[nginx_daemon_mode] }} restart nginx'
       when: nginx_build is change
-  become: yes
+  become: '{{ do_become }}'
   tags: [nginx, packages]
 
 - block:
@@ -212,7 +212,7 @@
       notify: '{{ nginx_daemon_modes[nginx_daemon_mode] }} reload nginx'
 
     - include_tasks: setup-service-{{ nginx_daemon_mode }}.yml
-  become: yes
+  become: '{{ do_become }}'
   tags: [nginx, config]
 
 - block:
@@ -228,7 +228,7 @@
         name: nginx
         state: restarted
       when: _nginx_start is failure
-  become: yes
+  become: '{{ do_become }}'
   tags: [nginx, services]
   when: nginx_daemon_mode == 'supervisor'
 
@@ -237,7 +237,7 @@
     name: nginx
     enabled: yes
     state: started
-  become: yes
+  become: '{{ do_become }}'
   tags: [nginx, services]
   when: nginx_daemon_mode != 'supervisor'
 
@@ -368,5 +368,5 @@
         {{ nginx_daemon_path }} -t
       changed_when: no
       check_mode: no
-  become: yes
+  become: '{{ do_become }}'
   tags: [nginx, sites]
