--- a/tasks/setup-service-supervisor.yml
+++ b/tasks/setup-service-supervisor.yml
@@ -12,5 +12,5 @@
       supervisorctl:
         name: nginx
         state: present
-  become: yes
+  become: '{{ do_become }}'
   tags: [nginx, config] # FIXME Remove when this is fixed https://github.com/ansible/ansible/issues/30882
