--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,6 @@ nginx_dynamic_defaults:
   apt:
     nginx_build_packages:
       # https://developers.google.com/speed/pagespeed/module/build_ngx_pagespeed_from_source
-      - git
       - libpcre3
       - libpcre3-dev
       - unzip
@@ -19,7 +18,6 @@ nginx_dynamic_defaults:
   yum:
     nginx_build_packages:
       # https://developers.google.com/speed/pagespeed/module/build_ngx_pagespeed_from_source
-      - git
       - pcre
       - pcre-devel
       - unzip
@@ -53,6 +51,8 @@ nginx_build_flags:
   - '--with-http_auth_request_module'
 
 nginx_clone_environment: {}
+nginx_clone_packages:
+  - git
 
 # Daemon
 nginx_config_file: nginx.conf.j2
