Add cleanup action and nginx_role_action variable (required)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,10 @@ nginx_dynamic_defaults:
       # For GeoIP blocking feature
       - geoip-database
       - libgeoip1
+    nginx_cleanup_packages:
+      - git
+      - libpcre3-dev
+      - zlib1g-dev
 
   yum:
     nginx_build_packages:
@@ -27,6 +31,10 @@ nginx_dynamic_defaults:
       # For GeoIP blocking feature
       - GeoIP-data
       - GeoIP
+    nginx_cleanup_packages:
+      - git
+      - pcre-devel
+      - zlib-devel
 
 nginx_pip_path: '{{ omit }}'  # Using Ansible python interpreter
 nginx_pip_umask: "{{ python_pip_umask|default('022') }}"
