--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,24 +7,27 @@ dependencies:
     daemon_user_id: '{{ nginx_daemon_user_id }}'
     daemon_group_id: '{{ nginx_daemon_group_id }}'
     tags: [nginx, dependencies]
+    when: nginx_role_action == 'setup'
 
   - role: github
     tags: [nginx, dependencies]
+    when: nginx_role_action == 'setup'
 
   - role: local-source
     tags: [nginx, dependencies]
+    when: nginx_role_action == 'setup'
 
   - role: logrotate
     logrotate_log_rotations: '{{ nginx_log_rotations }}'
     logrotate_role_action: setup
     tags: [nginx, dependencies]
-    when: nginx_log_rotations|length > 0
+    when: nginx_role_action == 'setup' and nginx_log_rotations|length > 0
 
   - role: supervisor
     tags: [nginx, dependencies]
-    when: nginx_daemon_mode == 'supervisor'
+    when: nginx_role_action == 'setup' and nginx_daemon_mode == 'supervisor'
 
   - role: ufw
     ufw_rules: '{{ nginx_ufw_rules }}'
     tags: [nginx, dependencies]
-    when: nginx_ufw_rules|length > 0
+    when: nginx_role_action == 'setup' and nginx_ufw_rules|length > 0
