Add variable daemon_groups

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -84,6 +84,7 @@ nginx_config_file: nginx.conf.j2
 nginx_daemon_enabled: "{{ nginx_daemon_modes[nginx_daemon_mode] == 'system' }}"
 nginx_daemon_group: www-data
 nginx_daemon_group_id: '{{ omit }}'
+nginx_daemon_groups: '{{ omit }}'
 nginx_daemon_path: /usr/share/nginx/sbin/nginx
 nginx_daemon_user: www-data
 nginx_daemon_user_id: '{{ omit }}'
