--- a/tasks/setup-service-supervisor.yml
+++ b/tasks/setup-service-supervisor.yml
@@ -5,7 +5,7 @@
       template:
         src: supervisor.conf.j2
         dest: /etc/supervisor/conf.d/nginx.conf
-        mode: 0644
+        mode: '644'
       notify: '{{ nginx_daemon_modes[nginx_daemon_mode] }} restart nginx'
 
     - name: Install Nginx service
