--- a/tasks/setup-service-systemd.yml
+++ b/tasks/setup-service-systemd.yml
@@ -4,7 +4,7 @@
   template:
     src: nginx.service.j2
     dest: /etc/systemd/system/nginx.service
-    mode: 0755
+    mode: '755'
   become: '{{ do_become }}'
   notify:
     - reload systemd
