--- a/tasks/setup-service-supervisor.yml
+++ b/tasks/setup-service-supervisor.yml
@@ -2,14 +2,14 @@
 
 - block:
     - name: Configure Nginx service
-      template:
+      ansible.builtin.template:
         src: supervisor.conf.j2
         dest: /etc/supervisor/conf.d/nginx.conf
         mode: '644'
       notify: '{{ nginx_daemon_modes[nginx_daemon_mode] }} restart nginx'
 
     - name: Install Nginx service
-      supervisorctl:
+      ansible.builtin.supervisorctl:
         name: nginx
         state: present
   become: '{{ do_become }}'
