--- a/tasks/setup-build-dep-dnf.yml
+++ b/tasks/setup-build-dep-dnf.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Install Nginx build dependencies
-  command:
+  ansible.builtin.command:
     echo "dnf builddep --assume{{ 'no' if ansible_check_mode else 'yes' }} nginx"
   become: '{{ do_become }}'
   changed_when: "'No uninstalled build requires' not in _nginx_build_dep.stdout|default('')"
@@ -11,7 +11,7 @@
   tags: [nginx, packages]  # FIXME Remove when this is fixed https://github.com/ansible/ansible/issues/30882
 
 - name: Install the latest version of required packages
-  yum:
+  ansible.builtin.yum:
     name: [openssl, openssl-devel]
     state: present
     update_cache: yes
