--- a/tasks/setup-service-systemd.yml
+++ b/tasks/setup-service-systemd.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Configure Nginx service
-  template:
+  ansible.builtin.template:
     src: nginx.service.j2
     dest: /etc/systemd/system/nginx.service
     mode: '755'
